src/tests/resources/players/invalid/wrongOrderArguments_1.players
Андрей Иванов 01
Артем Петров 02
Влад Сидоров 03
Слава Трубицин 04
Костя Мозговой 05